--- a/index.html
+++ b/index.html
@@ -374,8 +374,9 @@
                         <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
                                 src="./img/icons/enginiring.svg" alt=""><span class="header-slider__nav-num">04</span>
                         </li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span><img
-                                class="header-slider__nav-icon" src="./img/icons/aviation.svg" alt=""></li>
+                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                                src="./img/icons/aviation.svg" alt=""><span class="header-slider__nav-num">05</span>
+                        </li>
                         <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
                                 src="./img/icons/others.svg" alt=""><span class="header-slider__nav-num">06</span></li>
                     </ul>
@@ -496,10 +497,18 @@
                         RUSSIAN AND UKRAINE UNIVERSITIES
                     </h3>
                     <p class="title-block__info">
-                        gkdhvdvkhdkfvhscsdckjsckjsdkjcsdkjckjsdckjsdbckjsbdkcskjdbckjsbckjsbckjskjcscndsncdvfdvfvd</p>
+                        gkdhvdvkhdkfvh scsdckjsckjsdkjcsdk jckjsdckjsd bckjsbdkcskj bckjsbckjsbckj skjcscn dsncdvfdv fvd
+                    </p>
                 </div>
             </div>
+            <div class="universities__mobile-navigations">
+                <button class="btn btn--university btn--top-universities-mobile">TOP UNIVERSITiES</button>
+                <button class="btn btn--university btn--universities-russia-mobile btn--posive ">RUSSIA </button>
+                <button
+                    class="btn btn--university btn--university-ukraine-mobile btn--posive js-ua-universes">UKRAINE</button>
+            </div>
         </div>
+
         <div class="slider-wrap universities__slider">
             <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
@@ -634,7 +643,7 @@
                     <ul class="slider-line__list js-slider-line-universities">
                     </ul>
                 </div>
-                <div class="btn-wrap">
+                <div class="btn-wrap btn-wrap--university">
                     <button
                         class="slider-nav-btn slider-nav-btn--blue slider-nav-btn--prev js-university-slider__prev-btn">
                         <img src="./img/icons/prev-btn-blue.svg" alt="">
@@ -645,10 +654,11 @@
                 </div>
             </div>
             <div class="universities-navigations">
-                <button class="btn btn--university">TOP UNIVERSITiES</button>
-                <button class="btn btn--university btn--posive ">RUSSIA </button>
-                <button class="btn btn--university btn--posive js-ua-universes">UKRAINE</button>
-                <button class="btn btn--university btn--posive">LEARN MORE</button>
+                <button class="btn btn--university btn--university-top-universities">TOP UNIVERSITiES</button>
+                <button class="btn btn--university btn--university-universities-russia btn--posive ">RUSSIA </button>
+                <button
+                    class="btn btn--university btn--university-universities-ukraine btn--posive js-ua-universes">UKRAINE</button>
+                <button class="btn btn--university btn--university-universities-more btn--posive">LEARN MORE</button>
             </div>
         </div>
     </section>
@@ -759,7 +769,7 @@
                 COURSES AVAILABLE
             </h3>
             <p class="title-block__info">
-                gkdhvdvkhdkfvhscsdckjsckjsdkjcsdkjckjsdckjsdbckjsbdkcskjdbckjsbckjsbckjskjcscndsncdvfdvfvd</p>
+                gkdhvdvkhdkfvhscs dckjsck jsdkjcsd kjckjsdckjs dbckjsbdkcsk jdbckjsbc kjsbckjs kjcscnds ncdvfd vfvd</p>
         </div>
         <div class="slider-wrap courses__slider">
             <div class="slider-item js-slider-item-courses">
@@ -877,7 +887,7 @@
                         <li class="slider-line-point"></li> -->
                     </ul>
                 </div>
-                <div class="btn-wrap">
+                <div class="btn-wrap btn-wrap--courses">
                     <button class="slider-nav-btn slider-nav-btn--prev js-courses-slider__prev-btn">
                         <img src="./img/icons/prev-btn-blue.svg" alt="prev"></button>
                     <button class="slider-nav-btn slider-nav-btn--next js-courses-slider__next-btn">
@@ -886,7 +896,7 @@
                 </div>
             </div>
             <div class="universities-navigations">
-                <button class="btn btn--university btn--posive">LEARN MORE</button>
+                <button class="btn btn--university btn--posive btn--university-universities-more">LEARN MORE</button>
             </div>
         </div>
     </section>
@@ -928,8 +938,10 @@
                     COURSES AVAILABLE
                 </h3>
                 <p class="title-block__info">
-                    gkdhvdvkhdkfvhscsdckjsckjsdkjcsdkjckjsdckjsdbckjsbdkcskjdbckjsbckjsbckjskjcscndsncdvfdvfvd</p>
+                    gkdhvdvkhdkfvhscs dckjsckjsdkj csdkjc kjsdc kjsdbck jsbdkcsk jdbckjsbc kjsbc kjskjc scnds ncdvfdvfvd
+                </p>
             </div>
+
             <div class="benefits-items">
                 <div class="benefits-item">
                     <img src="./img/icons/benefits-icon-1.svg" alt="icon" class="benefits-item__icon">
