add comments section

--- a/assistant.html
+++ b/assistant.html
@@ -548,70 +548,223 @@
         </div>
     </section>
 
-    <div class="comment-item">
-        <!-- <div class="comment-item__wrap"> -->
-
-
-        <div class="comment-item__title">
-
-            <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
-            <hr class="comment-item__line">
+    <section class="check-universe">
+        <div class="container">
+            <div class="check-universe__wrap">
+                <div class="check-universe__buttons">
+                    <button class="check-universe__btn">Russia</button>
+                    <button class="check-universe__btn check-universe__btn--active">Ukraine</button>
+                    <button class="check-universe__btn">admission</button>
+                </div>
+                <div class="check-universe__list">
+                    <div class="universe-item">
+                        <h3 class="universe-item__title">about ukraine</h3>
+                        <hr class="universe-item__line">
+                        <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                    </div>
+                    <div class="universe-item">
+                        <h3 class="universe-item__title">about ukraine</h3>
+                        <hr class="universe-item__line">
+                        <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                    </div>
+                    <div class="universe-item">
+                        <h3 class="universe-item__title">about ukraine</h3>
+                        <hr class="universe-item__line">
+                        <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                    </div>
+                    <div class="universe-item">
+                        <h3 class="universe-item__title">about ukraine</h3>
+                        <hr class="universe-item__line">
+                        <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="comment-item__date">
-            Май 25, 2018 в 6:28 пп
+    </section>
+
+    <section class="comment">
+        <div class="container">
+            <div class="comment__wrap">
+                <div class="comments">
+                    <div class="comment-item">
+                        <div class="comment-item__title">
+                            <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
+                            <hr class="comment-item__line">
+                        </div>
+                        <div class="comment-item__date">
+                            Май 25, 2018 в 6:28 пп
+                        </div>
+                        <p class="comment-item__text">
+                            Interested in studying medicine in Russia Interested in studying medicine in Russia
+                            Interested
+                            in
+                            studying
+                            medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
+                            icine in RussiaInterested in studying medicine in RussiaInterested
+                        </p>
+
+                        <button class="btn comment-item__btn">Reply</button>
+                    </div>
+                    <div class="comment-item comment-item--response">
+                        <div class="comment-item__title">
+
+                            <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
+                            <hr class="comment-item__line">
+                        </div>
+                        <div class="comment-item__date">
+                            Май 25, 2018 в 6:28 пп
+                        </div>
+                        <p class="comment-item__text">
+                            Interested in studying medicine in Russia Interested in studying medicine in Russia
+                            Interested
+                            in
+                            studying
+                            medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
+                            icine in RussiaInterested in studying medicine in RussiaInterested
+                        </p>
+
+                        <button class="btn comment-item__btn">Reply</button>
+                    </div>
+                    <div class="comment-item">
+                        <div class="comment-item__title">
+                            <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
+                            <hr class="comment-item__line">
+                        </div>
+                        <div class="comment-item__date">
+                            Май 25, 2018 в 6:28 пп
+                        </div>
+                        <p class="comment-item__text">
+                            Interested in studying medicine in Russia Interested in studying medicine in Russia
+                            Interested
+                            in
+                            studying
+                            medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
+                            icine in RussiaInterested in studying medicine in RussiaInterested
+                        </p>
+                        <button class="btn comment-item__btn">Reply</button>
+                    </div>
+                    <div class="comment-item">
+                        <div class="comment-item__title">
+                            <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
+                            <hr class="comment-item__line">
+                        </div>
+                        <div class="comment-item__date">
+                            Май 25, 2018 в 6:28 пп
+                        </div>
+                        <p class="comment-item__text">
+                            Interested in studying medicine in Russia Interested in studying medicine in Russia
+                            Interested
+                            in
+                            studying
+                            medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
+                            icine in RussiaInterested in studying medicine in RussiaInterested
+                        </p>
+                        <button class="btn comment-item__btn">Reply</button>
+                    </div>
+                    <div class="comment-item">
+                        <div class="comment-item__title">
+                            <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
+                            <hr class="comment-item__line">
+                        </div>
+                        <div class="comment-item__date">
+                            Май 25, 2018 в 6:28 пп
+                        </div>
+                        <p class="comment-item__text">
+                            Interested in studying medicine in Russia Interested in studying medicine in Russia
+                            Interested
+                            in
+                            studying
+                            medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
+                            icine in RussiaInterested in studying medicine in RussiaInterested
+                        </p>
+                        <button class="btn comment-item__btn">Reply</button>
+                    </div>
+                </div>
+                <div class="commetns-form">
+                    <form action="#" class="admission-form">
+                        <h3 class="admission-form__header">COMPLETE THE FORM</h3>
+                        <p class="admission-form__subtitle">Fill out an online form to apply for Russian or Ukrainian
+                            universities</p>
+                        <input type="text" placeholder="First Name" class="admission-form__input">
+                        <input type="email" placeholder="Email" class="admission-form__input">
+                        <input type="tel" placeholder="Phone" class="admission-form__input">
+                        <input type="text" placeholder="Country" class="admission-form__input">
+                        <input type="submit" class="btn btn--submit admission-form__btn" value="Send">
+                    </form>
+                </div>
+            </div>
         </div>
-        <p class="comment-item__text">
-            Interested in studying medicine in Russia Interested in studying medicine in Russia Interested in
-            studying
-            medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
-            icine in RussiaInterested in studying medicine in RussiaInterested
-        </p>
-
-        <button class="btn comment-item__btn">Reply</button>
-    </div>
-    <div class="comment-item">
-        <!-- <div class="comment-item__wrap"> -->
-
-
-        <div class="comment-item__title">
-
-            <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
-            <hr class="comment-item__line">
         </div>
-        <div class="comment-item__date">
-            Май 25, 2018 в 6:28 пп
+    </section>
+    <footer class="footer">
+        <div class="footer-decarate"></div>
+        <div class="telephones">
+            <!-- <div class="telephones__wrap"> -->
+            <img src="./img/icons/telephone.svg" class="telephones__icon" alt="tel">
+            <div class="telephones__inner">
+                <a href="tel:+380637909294" class="telephones__link">+38 (063) 790-92-94</a>
+                <a href="tel:+79092077688" class="telephones__link telephones__link--rus">+7 (909)
+                    207-76-88</a>
+            </div>
+            <!-- </div> -->
         </div>
-        <p class="comment-item__text">
-            Interested in studying medicine in Russia Interested in studying medicine in Russia Interested in
-            studying
-            medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
-            icine in RussiaInterested in studying medicine in RussiaInterested
-        </p>
-
-        <button class="btn comment-item__btn">Reply</button>
-    </div>
-    <div class="comment-item">
-        <!-- <div class="comment-item__wrap"> -->
-
-
-        <div class="comment-item__title">
-
-            <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
-            <hr class="comment-item__line">
+        <div class="container">
+            <h3 class="form-title">Or fill in the form</h3>
+            <form action="" class="footer-form">
+                <input type="text" placeholder="First Name" class="footer-form__input footer-form__input--name">
+                <input type="text" placeholder="Country" class="footer-form__input footer-form__input--country">
+                <input type="text" placeholder="Phone Number" class="footer-form__input footer-form__input--phone">
+                <input type="email" placeholder="Email Adress" class="footer-form__input footer-form__input--email">
+                <input type="submit" class="footer-form__btn" value="Request Info">
+            </form>
+            <div class="footer-items">
+                <div class="footer-item">
+                    <img src="./img/icons/logo footer.svg" alt="edugain overseas">
+                    <p class="footer-item__text">
+                        Edugain Overseas has been providing high-quality service to all students interested in education
+                        in Russian and Ukrainian universities since 2005, make sure to contact us today to make your
+                        dreams come true!
+                    </p>
+                </div>
+                <div class="footer-item">
+                    <ul>
+                        <li>
+                            <h3 class="footer-item__title">Quick Navigation</h3>
+                        </li>
+                        <li><a class="footer-item__subtitle" href="#">Courses</a></li>
+                        <li><a class="footer-item__subtitle" href="#">Universities</a></li>
+                        <li><a class="footer-item__subtitle" href="#">Admission process</a></li>
+                        <li><a class="footer-item__subtitle" href="#">How to obtain visa</a></li>
+                        <li><a class="footer-item__subtitle" href="#">Apply online</a></li>
+                    </ul>
+                    <!-- <h3 class="footer-item__title">Quick Navigation</h3>
+                    <h4 class="footer-item__subtitle">Courses</h4>
+                    <h4 class="footer-item__subtitle">Universities</h4>
+                    <h4 class="footer-item__subtitle">Admission process</h4>
+                    <h4 class="footer-item__subtitle">How to obtain visa</h4>
+                    <h4 class="footer-item__subtitle">Apply online</h4> -->
+                </div>
+                <div class="footer-item footer-item--contact">
+                    <h3 class="footer-item__title">Contact us</h3>
+                    <h4 class="footer-item__subtitle">For Admissions:</h4>
+                    <a href="tel:+380637909294" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
+                    </a>
+                    <a href="tel:+79092077688" class="footer-item__link"> WhatsApp: +7 909 207 76 88
+                    </a>
+                    <a href="" class="footer-item__link"> Email: admissions@edugainoverseas.com
+                    </a>
+                    <h4 class="footer-item__subtitle footer-item__subtitle--last">For Cooperation:</h4>
+                    <a href="tel:+380637909294" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
+                    </a>
+                    <a href="mailto:admissions@edugainoverseas.com" class="footer-item__link"> Email:
+                        admissions@edugainoverseas.com
+                    </a>
+                </div>
+            </div>
+            <!-- <div class="footer-contact"></div> -->
         </div>
-        <div class="comment-item__date">
-            Май 25, 2018 в 6:28 пп
-        </div>
-        <p class="comment-item__text">
-            Interested in studying medicine in Russia Interested in studying medicine in Russia Interested in
-            studying
-            medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
-            icine in RussiaInterested in studying medicine in RussiaInterested
-        </p>
-
-        <button class="btn comment-item__btn">Reply</button>
-    </div>
-    </div>
+        <div class="copiright">© Prime Network Copyright. All Rights Reserved.</div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./js/formStiky.js"></script>
